--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
                 <div class="blog_header">
                     <h1 class="header_title">Mes réalisations, <br> en formation.</h1>
                     <div class="header_text">
-                        <p class="text">Tous ces sites sont factices et ont été réalisés dans le cadre de ma formation.
+                        <p class="text">Tous ces sites sont des projets fictifs réalisés dans le cadre de ma formation.
                         </p>
                         <a href="https://github.com/Dzk00" class="link">Voir mon GitHub<i class="fa-solid fa-arrow-right-long fa"></i></a>
                     </div>
