--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                         l'AFPA et recherche activement un stage du 17/07/23 au 22/09/23.</p>
 
                     <div class="btns">
-                        <a href="https://fr.scribd.com/document/633226487/CV-dev?secret_password=cFbgmqhAmdZwacbU39c8"></a><button class="home_button">C.V.</button></a>
+                        <a href="assets/pdf/CV-dev.pdf"><button class="home_button">C.V.</button></a>
                         <button onclick="location.href='#contact'" class="home_button">Contact</button>
                     </div>
 
