--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
 
             <div class="right_right">
                 <ul class="social_contact">
-                    <li><a href="https://github.com/Dzk00"><i class="fa-brands fa-github fa"></i></a></li>
-                    <li><a href="https://www.linkedin.com/in/jordan-liautaud-847993269/"><i class="fa-brands fa-linkedin-in fa"></i></a></li>
+                    <li><a href="https://github.com/Dzk00" target="_blank"><i class="fa-brands fa-github fa"></i></a></li>
+                    <li><a href="https://www.linkedin.com/in/jordan-liautaud-847993269/" target="_blank"><i class="fa-brands fa-linkedin-in fa"></i></a></li>
                     <li><a href="#"><i class="fa-solid fa-spinner fa"></i></a></li>
                 </ul>
 
@@ -54,7 +54,7 @@
                         l'AFPA et recherche activement un stage du 17/07/23 au 22/09/23.</p>
 
                     <div class="btns">
-                        <a href="assets/pdf/CV-dev.pdf"><button class="home_button">C.V.</button></a>
+                        <button class="home_button"><a href="assets/pdf/CV-dev.pdf" target="_blank">C.V.</a></button>
                         <button onclick="location.href='#contact'" class="home_button">Contact</button>
                     </div>
 
@@ -135,7 +135,7 @@
                     <div class="header_text">
                         <p class="text">Tous ces sites sont des projets fictifs réalisés dans le cadre de ma formation.
                         </p>
-                        <a href="https://github.com/Dzk00" class="link">Voir mon GitHub<i class="fa-solid fa-arrow-right-long fa"></i></a>
+                        <a href="https://github.com/Dzk00" target="_blank" class="link">Voir mon GitHub<i class="fa-solid fa-arrow-right-long fa"></i></a>
                     </div>
                 </div>
 
@@ -164,13 +164,13 @@
                         non rémuneré par l'entreprise <br> car stagiaire de la formation professionnelle .</p>
                         <div class="social_contact">
                             <ul>
-                                <li class="contact_icons"><a href="https://www.linkedin.com/in/jordan-liautaud-847993269/"><i class="fa-brands fa-linkedin-in fa"></i></a></li>
-                                <li class="contact_icons"><a href="https://www.facebook.com/jordan.liautaud"><i class="fa-brands fa-facebook-f fa"></i></a></li>
-                                <li class="contact_icons"><a href="https://github.com/Dzk00"><i class="fa-brands fa-github fa"></i></a></li>
+                                <li class="contact_icons"><a href="https://www.linkedin.com/in/jordan-liautaud-847993269/" target="_blank"><i class="fa-brands fa-linkedin-in fa"></i></a></li>
+                                <li class="contact_icons"><a href="https://www.facebook.com/jordan.liautaud" target="_blank"><i class="fa-brands fa-facebook-f fa"></i></a></li>
+                                <li class="contact_icons"><a href="https://github.com/Dzk00" target="_blank"><i class="fa-brands fa-github fa"></i></a></li>
                             </ul>
                         </div>
 
-                        <a href="https://fr.scribd.com/document/633226487/CV-dev?secret_password=cFbgmqhAmdZwacbU39c8" class="link">
+                        <a href="assets/pdf/CV-dev.pdf" target="_blank" class="link">
                             Curriculum Vitae
                             <i class="fa-solid fa-arrow-right-long fa"></i>
                         </a>
@@ -207,9 +207,9 @@
             </a>
 
             <ul class="social_contact">
-                <li class="footer_link"><a href="https://www.linkedin.com/in/jordan-liautaud-847993269/"><i class="fa-brands fa-linkedin-in fa"></i></a></li>
-                <li class="footer_link"><a href="https://www.facebook.com/jordan.liautaud"><i class="fa-brands fa-facebook-f fa"></i></a></li>
-                <li class="footer_link"><a href="https://github.com/Dzk00"><i class="fa-brands fa-github fa"></i></a></li>
+                <li class="footer_link"><a href="https://www.linkedin.com/in/jordan-liautaud-847993269/" target="_blank"><i class="fa-brands fa-linkedin-in fa"></i></a></li>
+                <li class="footer_link"><a href="https://www.facebook.com/jordan.liautaud" target="_blank"><i class="fa-brands fa-facebook-f fa"></i></a></li>
+                <li class="footer_link"><a href="https://github.com/Dzk00" target="_blank"><i class="fa-brands fa-github fa"></i></a></li>
                 <li class="footer_link"><a href="#"><i class="fa-solid fa-spinner fa"></i></a></li>
                 <li class="footer_link"><a href="#"><i class="fa-solid fa-spinner fa"></i></a></li>
 
