add js onclick fct

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                         l'AFPA et recherche activement un stage du 17/07/23 au 22/09/23.</p>
 
                     <div class="btns">
-                        <button class="home_button"><a href="assets/pdf/CV-dev.pdf" target="_blank">C.V.</a></button>
+                        <button onclick="ouvrirPDF('assets/pdf/CV-dev.pdf')" class="home_button">C.V.</button>
                         <button onclick="location.href='#contact'" class="home_button">Contact</button>
                     </div>
 
