update html ortho

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                         <span class="titleBold">Liautaud</span>
                     </h1>
                     <p class="proff">Apprenti Dev Web</p>
-                    <p class="text homeText">Vivant actuellement sur Lille, en France, je suis en formation à distance à
+                    <p class="text homeText">Vivant actuellement à Lille, je suis en formation à distance à
                         l'AFPA et recherche activement un stage du 17/07/23 au 22/09/23.</p>
 
                     <div class="btns">
@@ -68,12 +68,12 @@
         <section class="about" id="about">
             <div class="container">
                 <div class="info">
-                    <h1 class="title aboutTitle">A propos de Moi</h1>
-                    <p class="text_lg">Developpeur web en cours de formation, j'ai 30 ans et je souhaiterai me
+                    <h1 class="title aboutTitle">À propos de moi</h1>
+                    <p class="text_lg">Développeur Web en cours de formation, je souhaiterai me
                         spécialiser dans le développement d'interface utilisateur dynamique et moderne.</p>
                     <p class="text aboutText">J'ai acquis au fil de mes expériences professionnelles précédentes (aide
                         soignant, artiste, agent d'accueil et serveur) des compétences relationnelles telles que
-                        l'empathie, la communication efficace et le sens de l'accueil, qui me permettent de travailler
+                        l'empathie, la communication et le sens de l'accueil, qui me permet de travailler
                         efficacement en équipe et de fournir un service client de qualité.</p>
                     <img class="sign" src="assets/img/code.png"></img>
                 </div>
@@ -95,7 +95,7 @@
             <div class="container">
                 <div class="quality">
                     <h1 class="qua_title">8+</h1>
-                    <p class="qua_text">Années d'expérience <br> En interactions humaines</p>
+                    <p class="qua_text">Années d'expérience <br> en interactions humaines</p>
                 </div>
 
                 <div class="content">
@@ -120,7 +120,7 @@
 
                             <div class="card about_card">
                                 <i class="fa-solid fa-comment icons"></i>
-                                <p class="card_title">Honnêteté</p>
+                                <p class="card_title">Rigueur</p>
                             </div>
                         </div>
                     </div>
@@ -131,7 +131,7 @@
         <section class="blog" id="blog">
             <div class="container">
                 <div class="blog_header">
-                    <h1 class="header_title">Mes réalisations, <br> en formation.</h1>
+                    <h1 class="header_title">Mes réalisations <br> en formation.</h1>
                     <div class="header_text">
                         <p class="text">Tous ces sites sont des projets fictifs réalisés dans le cadre de ma formation.
                         </p>
@@ -160,8 +160,8 @@
             <div class="container">
                 <div class="left_content">
                     <h1 class="title">Disponible</h1>
-                    <p class="text">Je recherche un stage dans le développement web, <br> du 17/07/23 au 22/09/23, 
-                        non rémuneré par l'entreprise <br> car stagiaire de la formation professionnelle .</p>
+                    <p class="text">Je cherche un stage dans le développement web, du 17/07/23 au 22/09/23, 
+                        non rémuneré par l'entreprise car stagiaire de la formation professionnelle .</p>
                         <div class="social_contact">
                             <ul>
                                 <li class="contact_icons"><a href="https://www.linkedin.com/in/jordan-liautaud-847993269/" target="_blank"><i class="fa-brands fa-linkedin-in fa"></i></a></li>
