--- a/index.html
+++ b/index.html
@@ -20,8 +20,10 @@
 
             <div class="right_right">
                 <ul class="social_contact">
-                    <li><a href="https://github.com/Dzk00" target="_blank"><i class="fa-brands fa-github fa"></i></a></li>
-                    <li><a href="https://www.linkedin.com/in/jordan-liautaud-847993269/" target="_blank"><i class="fa-brands fa-linkedin-in fa"></i></a></li>
+                    <li><a href="https://github.com/Dzk00" target="_blank"><i class="fa-brands fa-github fa"></i></a>
+                    </li>
+                    <li><a href="https://www.linkedin.com/in/jordan-liautaud-847993269/" target="_blank"><i
+                                class="fa-brands fa-linkedin-in fa"></i></a></li>
                     <li><a href="#"><i class="fa-solid fa-spinner fa"></i></a></li>
                 </ul>
 
@@ -71,10 +73,11 @@
                     <h1 class="title aboutTitle">À propos de moi</h1>
                     <p class="text_lg">Développeur Web en cours de formation, je souhaiterai me
                         spécialiser dans le développement d'interface utilisateur dynamique et moderne.</p>
-                    <p class="text aboutText">J'ai acquis au fil de mes expériences professionnelles précédentes (aide
-                        soignant, artiste, agent d'accueil et serveur) des compétences relationnelles telles que
-                        l'empathie, la communication et le sens de l'accueil, qui me permet de travailler
-                        efficacement en équipe et de fournir un service client de qualité.</p>
+                    <p class="text aboutText">Afin de rendre l'expérience utilisateur riche et dynamique,
+                        je mets mes compétences au service de mon savoir-faire afin de développer des interfaces
+                        ergonomiques avec une navigation optimisée,
+                        afin que le client soit satisfait au mieux de son expérience.
+                    </p>
                     <img class="sign" src="assets/img/code.png"></img>
                 </div>
 
@@ -99,9 +102,11 @@
                 </div>
 
                 <div class="content">
-                    <h1 class="title">N'ayant pas encore d'expérience professionnelle dans le développement web, je met
-                        l'accent sur mes qualités et
-                        compétences acquises dans mes anciens métiers.</h1>
+                    <h1 class="title">Mes compétences relationnelles sont l'un de mes points forts. J'ai appris à
+                        écouter activement,
+                        à communiquer clairement et à travailler en équipe pour atteindre des objectifs communs.
+                        Je suis également capable de m'adapter rapidement à toutes les situations et fais preuve
+                        d'empathie.</h1>
                     <div class="card_container">
                         <div class="card_row">
                             <div class="card about_card">
@@ -115,12 +120,12 @@
 
                             <div class="card about_card">
                                 <i class="fa-solid fa-book-open-reader icons"></i>
-                                <p class="card_title">Curiosité</p>
+                                <p class="card_title">Réactivité</p>
                             </div>
 
                             <div class="card about_card">
                                 <i class="fa-solid fa-comment icons"></i>
-                                <p class="card_title">Rigueur</p>
+                                <p class="card_title">Adaptabilité</p>
                             </div>
                         </div>
                     </div>
@@ -135,22 +140,23 @@
                     <div class="header_text">
                         <p class="text">Tous ces sites sont des projets fictifs réalisés dans le cadre de ma formation.
                         </p>
-                        <a href="https://github.com/Dzk00" target="_blank" class="link">Voir mon GitHub<i class="fa-solid fa-arrow-right-long fa"></i></a>
+                        <a href="https://github.com/Dzk00" target="_blank" class="link">Voir mon GitHub<i
+                                class="fa-solid fa-arrow-right-long fa"></i></a>
                     </div>
                 </div>
 
                 <div class="content">
                     <div class="card blog_card">
-                        <img src="assets/img/blog1.jpg" alt="work1">
+                        <img src="assets/img/blog1.jpg" onclick="sushi('https://dzk00.github.io/sushi/')" alt="work1">
                     </div>
                     <div class="card blog_card">
-                        <img src="assets/img/blog2.jpg" alt="work2">
+                        <img src="assets/img/blog2.jpg" onclick="kyoto('https://dzk00.github.io/kyoto/')" alt="work2">
                     </div>
                     <div class="card blog_card">
-                        <img src="assets/img/blog3.jpg" alt="work3">
+                        <img src="assets/img/blog3.jpg" onclick="hosting('https://dzk00.github.io/hosting/')" alt="work3">
                     </div>
                     <div class="card blog_card">
-                        <img src="assets/img/blog4.jpg" alt="work4">
+                        <img src="assets/img/blog4.jpg" onclick="georgia('https://dzk00.github.io/georgia/')" alt="work4">
                     </div>
                 </div>
             </div>
@@ -160,20 +166,23 @@
             <div class="container">
                 <div class="left_content">
                     <h1 class="title">Disponible</h1>
-                    <p class="text">Je cherche un stage dans le développement web, du 17/07/23 au 22/09/23, 
-                        non rémuneré par l'entreprise car stagiaire de la formation professionnelle .</p>
-                        <div class="social_contact">
-                            <ul>
-                                <li class="contact_icons"><a href="https://www.linkedin.com/in/jordan-liautaud-847993269/" target="_blank"><i class="fa-brands fa-linkedin-in fa"></i></a></li>
-                                <li class="contact_icons"><a href="https://www.facebook.com/jordan.liautaud" target="_blank"><i class="fa-brands fa-facebook-f fa"></i></a></li>
-                                <li class="contact_icons"><a href="https://github.com/Dzk00" target="_blank"><i class="fa-brands fa-github fa"></i></a></li>
-                            </ul>
-                        </div>
+                    <p class="text">Je cherche un stage dans le développement web, du 17/07/23 au 22/09/23,
+                        non rémuneré par l'entreprise car stagiaire de la formation professionnelle.</p>
+                    <div class="social_contact">
+                        <ul>
+                            <li class="contact_icons"><a href="https://www.linkedin.com/in/jordan-liautaud-847993269/"
+                                    target="_blank"><i class="fa-brands fa-linkedin-in fa"></i></a></li>
+                            <li class="contact_icons"><a href="https://www.facebook.com/jordan.liautaud"
+                                    target="_blank"><i class="fa-brands fa-facebook-f fa"></i></a></li>
+                            <li class="contact_icons"><a href="https://github.com/Dzk00" target="_blank"><i
+                                        class="fa-brands fa-github fa"></i></a></li>
+                        </ul>
+                    </div>
 
-                        <a href="assets/pdf/CV-dev.pdf" target="_blank" class="link">
-                            Curriculum Vitae
-                            <i class="fa-solid fa-arrow-right-long fa"></i>
-                        </a>
+                    <a href="assets/pdf/CV-dev.pdf" target="_blank" class="link">
+                        Curriculum Vitae
+                        <i class="fa-solid fa-arrow-right-long fa"></i>
+                    </a>
                 </div>
 
                 <div class="right_content">
@@ -189,7 +198,8 @@
                             </div>
 
                             <div class="input_group">
-                                <textarea placeholder="Envoi d'un formulaire via js/php en cours d'apprentissage, veuillez utilisez le bouton Send pour m'écrire un mail, merci"></textarea>
+                                <textarea
+                                    placeholder="Envoi d'un formulaire via js/php en cours d'apprentissage, veuillez utilisez le bouton Send pour m'écrire un mail, merci"></textarea>
                             </div>
 
                             <button class="send btn">Send</button>
@@ -207,9 +217,12 @@
             </a>
 
             <ul class="social_contact">
-                <li class="footer_link"><a href="https://www.linkedin.com/in/jordan-liautaud-847993269/" target="_blank"><i class="fa-brands fa-linkedin-in fa"></i></a></li>
-                <li class="footer_link"><a href="https://www.facebook.com/jordan.liautaud" target="_blank"><i class="fa-brands fa-facebook-f fa"></i></a></li>
-                <li class="footer_link"><a href="https://github.com/Dzk00" target="_blank"><i class="fa-brands fa-github fa"></i></a></li>
+                <li class="footer_link"><a href="https://www.linkedin.com/in/jordan-liautaud-847993269/"
+                        target="_blank"><i class="fa-brands fa-linkedin-in fa"></i></a></li>
+                <li class="footer_link"><a href="https://www.facebook.com/jordan.liautaud" target="_blank"><i
+                            class="fa-brands fa-facebook-f fa"></i></a></li>
+                <li class="footer_link"><a href="https://github.com/Dzk00" target="_blank"><i
+                            class="fa-brands fa-github fa"></i></a></li>
                 <li class="footer_link"><a href="#"><i class="fa-solid fa-spinner fa"></i></a></li>
                 <li class="footer_link"><a href="#"><i class="fa-solid fa-spinner fa"></i></a></li>
 
