--- a/index.html
+++ b/index.html
@@ -74,9 +74,8 @@
                     <p class="text_lg">Développeur Web en cours de formation, je souhaiterai me
                         spécialiser dans le développement d'interface utilisateur dynamique et moderne.</p>
                     <p class="text aboutText">Afin de rendre l'expérience utilisateur riche et dynamique,
-                        je mets mes compétences au service de mon savoir-faire afin de développer des interfaces
-                        ergonomiques avec une navigation optimisée,
-                        afin que le client soit satisfait au mieux de son expérience.
+                        je mets mes compétences au service de mon savoir-faire ce qui me permet de développer des interfaces
+                        ergonomiques avec une navigation optimisée pour que le client soit satisfait au mieux de son expérience.
                     </p>
                     <img class="sign" src="assets/img/code.png"></img>
                 </div>
