update responsive mobile + icons

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
             <div class="container">
                 <div class="info">
                     <h1 class="title aboutTitle">À propos de moi</h1>
-                    <p class="text_lg">Développeur Web en cours de formation, je souhaiterai me
+                    <p class="text_lg">Développeur Web en formation, je souhaiterai me
                         spécialiser dans le développement d'interface utilisateur dynamique et moderne.</p>
                     <p class="text aboutText">Afin de rendre l'expérience utilisateur riche et dynamique,
                         je mets mes compétences au service de mon savoir-faire ce qui me permet de développer des interfaces
@@ -118,12 +118,12 @@
                             </div>
 
                             <div class="card about_card">
-                                <i class="fa-solid fa-book-open-reader icons"></i>
+                                <i class="fa-solid fa-chart-line icons"></i>
                                 <p class="card_title">Réactivité</p>
                             </div>
 
                             <div class="card about_card">
-                                <i class="fa-solid fa-comment icons"></i>
+                                <i class="fa-solid fa-arrows-turn-to-dots icons"></i>
                                 <p class="card_title">Adaptabilité</p>
                             </div>
                         </div>
