--- a/index.html
+++ b/index.html
@@ -146,16 +146,16 @@
 
                 <div class="content">
                     <div class="card blog_card">
-                        <img src="assets/img/blog1.jpg" onclick="sushi('https://dzk00.github.io/sushi/')" alt="work1">
+                        <img src="assets/img/blog1.jpg" onclick="target('https://dzk00.github.io/sushi/')" alt="work1">
                     </div>
                     <div class="card blog_card">
-                        <img src="assets/img/blog2.jpg" onclick="kyoto('https://dzk00.github.io/kyoto/')" alt="work2">
+                        <img src="assets/img/blog2.jpg" onclick="target('https://dzk00.github.io/kyoto/')" alt="work2">
                     </div>
                     <div class="card blog_card">
-                        <img src="assets/img/blog3.jpg" onclick="hosting('https://dzk00.github.io/hosting/')" alt="work3">
+                        <img src="assets/img/blog3.jpg" onclick="target('https://dzk00.github.io/hosting/')" alt="work3">
                     </div>
                     <div class="card blog_card">
-                        <img src="assets/img/blog4.jpg" onclick="georgia('https://dzk00.github.io/georgia/')" alt="work4">
+                        <img src="assets/img/blog4.jpg" onclick="target('https://dzk00.github.io/georgia/')" alt="work4">
                     </div>
                 </div>
             </div>
