phps symf update

--- a/index.html
+++ b/index.html
@@ -84,10 +84,12 @@
                 <div class="skills">
                     <h1 class="title">Compétences</h1>
                     <ul class="skill_bars">
-                        <li style="--i:0" class="progress_bar">CSS</li>
+                        <li style="--i:0" class="progress_bar">CSS/SASS</li>
                         <li style="--i:1" class="progress_bar">Javascript</li>
                         <li style="--i:2" class="progress_bar">Vue.js</li>
                         <li style="--i:3" class="progress_bar">Communication</li>
+                        <li style="--i:4" class="progress_bar">Php</li>
+                        <li style="--i:5" class="progress_bar">Symfony</li>
                     </ul>
                 </div>
             </div>
