--- a/index.html
+++ b/index.html
@@ -83,14 +83,14 @@
 
                 <div class="skills">
                     <h1 class="title">Compétences</h1>
-                    <ul class="skill_bars">
-                        <li style="--i:0" class="progress_bar">CSS/SASS</li>
-                        <li style="--i:1" class="progress_bar">Javascript</li>
-                        <li style="--i:2" class="progress_bar">Vue.js</li>
-                        <li style="--i:3" class="progress_bar">Communication</li>
-                        <li style="--i:4" class="progress_bar">Php</li>
-                        <li style="--i:5" class="progress_bar">Symfony</li>
-                    </ul>
+                    <div class="skill_bars">
+                        <div style="--i:0" class="progress_bar"><i class="fa-brands fa-css3-alt fa-beat-fade fa-2xl" style="color: #199ef0;"></i><p>CSS/SASS</p></div>
+                        <div style="--i:1" class="progress_bar">Javascript</div>
+                        <div style="--i:2" class="progress_bar">Vue.js</div>
+                        <div style="--i:3" class="progress_bar">Communication</div>
+                        <div style="--i:4" class="progress_bar">Php</div>
+                        <div style="--i:5" class="progress_bar">Symfony</div>
+                    </div>
                 </div>
             </div>
         </section>
