--- a/index.html
+++ b/index.html
@@ -84,12 +84,12 @@
                 <div class="skills">
                     <h1 class="title">Compétences</h1>
                     <div class="skill_bars">
-                        <div style="--i:0" class="progress_bar"><i class="fa-brands fa-css3-alt fa-beat-fade fa-2xl" style="color: #199ef0;"></i><p>CSS/SASS</p></div>
-                        <div style="--i:1" class="progress_bar">Javascript</div>
-                        <div style="--i:2" class="progress_bar">Vue.js</div>
-                        <div style="--i:3" class="progress_bar">Communication</div>
-                        <div style="--i:4" class="progress_bar">Php</div>
-                        <div style="--i:5" class="progress_bar">Symfony</div>
+                        <div class="progress_bar"><i class="fa-brands fa-css3-alt icons" style="color: #2594e3"></i><p>CSS/SASS</p></div>
+                        <div class="progress_bar"><i class="fa-brands fa-js icons" style="color: #d5c218"></i>Javascript</div>
+                        <div class="progress_bar"><i class="fa-brands fa-vuejs icons" style="color: #3FB984"></i>Vue.js</div>
+                        <div class="progress_bar"><i class="fa-regular fa-comment icons" style="color: #f09819"></i>Communication</div>
+                        <div class="progress_bar"><i class="fa-brands fa-php icons" style="color: #787CB4"></i>Php</div>
+                        <div class="progress_bar"><i class="fa-brands fa-symfony icons"></i>Symfony</div>
                     </div>
                 </div>
             </div>
