--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                         je mets mes compétences au service de mon savoir-faire ce qui me permet de développer des interfaces
                         ergonomiques avec une navigation optimisée pour que le client soit satisfait au mieux de son expérience.
                     </p>
-                    <img class="sign" src="assets/img/code.png"></img>
+                    <img class="sign" src="assets/img/code.png" alt="img1"></img>
                 </div>
 
 
