--- a/index.html
+++ b/index.html
@@ -5,7 +5,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="Content-Security-Policy" content="script-src assets">
+    <meta http-equiv="Content-Security-Policy" content="
+    script-src 'nonce-pioupiou' 'strict-dynamic';
+    object-src 'none';
+    base-uri 'none';">
     <title>Jordan Portfolio</title>
 
     <link rel="stylesheet" href="assets/fontawesome-free-6.3.0-web/css/all.min.css">
@@ -243,7 +246,7 @@
         </a>
     </div>
 
-    <script src="assets/js/script.js"></script>
+    <script nonce="pioupiou" src="assets/js/script.js"></script>
 </body>
 
 </html>
