--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@
             <i class="fa-solid fa-arrow-up-long fa"></i>
         </a>
     </div>
-    <script src="https://unpkg.com/scrollreveal"></script>
+    <script nonce="pioupiou" src="https://unpkg.com/scrollreveal"></script>
     <script nonce="pioupiou" src="assets/js/script.js"></script>
     <script nonce="pioupiou" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
 </body>
