--- a/index.html
+++ b/index.html
@@ -13,6 +13,12 @@
 
     <link rel="stylesheet" href="assets/fontawesome-free-6.3.0-web/css/all.min.css">
     <link rel="stylesheet" href="assets/css/style.css">
+    <script nonce="pioupiou" type="text/Javascript">
+        (function () {
+            emailjs.init("NdqBgqC7QWBgLnmIa");
+        })
+    </script>
+    <script nonce="pioupiou" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
 </head>
 
 <body>
@@ -208,7 +214,7 @@
                                     placeholder="Votre message"></textarea>
                             </div>
 
-                            <button id="sendform"class="send btn">Send</button>
+                            <button id="sendform" class="send btn">Send</button>
                         </form>
                     </div>
                 </div>
@@ -247,11 +253,5 @@
     </div>
     <script nonce="pioupiou" src="https://unpkg.com/scrollreveal"></script>
     <script nonce="pioupiou" src="assets/js/script.js"></script>
-    <script nonce="pioupiou" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
-    <script nonce="pioupiou" type="text/Javascript">
-        (function () {
-            emailjs.init("ois3QCopknIxvEi54");
-        })
-    </script>
 </body>
 </html>
